# deoxys_control

./: .gitignore  README.md
deoxys/: CMakeLists.txt  InstallPackage  Makefile  requirements.txt  setup.py
deoxys/auto_scripts/: auto_arm.sh  auto_gripper.sh  color_variables.sh  debug_gripper.sh  fix_ld_issue.sh
deoxys/beta_scripts/: benchmark_joint_impedance.py  benchmark_osc.py  kinesthetic_teaching.py  osc_traj_following.py  reset_joints_w_impedance.py  visualize_benchmark_results.py
deoxys/cmake/: protobuf.cmake
deoxys/config/: bulbasaur.yml  cartesian-velocity-controller.yml  charmander.yml  compliant-joint-impedance-controller.yml  control_config.yml  deoxys_default_logger.yml  joint-impedance-controller.yml  joint-position-controller.yml  local-host.yml  osc-pose-controller.yml  osc-position-controller.yml  osc-yaw-controller.yml  pikachu.yml  squirtle.yml
deoxys/deoxys/: __init__.py
deoxys/deoxys/assets/franka_emika_panda/: panda.xml  scene.xml
deoxys/deoxys/experimental/: __init__.py  motion_utils.py
deoxys/deoxys/franka_interface/: __init__.py  franka_interface.py  visualizer.py
deoxys/deoxys/franka_interface/robot_models/panda/: panda_free_gripper.urdf  panda_gripper.urdf  panda_marker.urdf
deoxys/deoxys/franka_interface/robot_models/planes/: plane.mtl  plane.urdf  plane_ceramic.mtl  plane_ceramic.urdf  wall.mtl  wall.urdf
deoxys/deoxys/proto/: sample_pb2.py
deoxys/deoxys/proto/franka_interface/: franka_controller_pb2.py  franka_robot_state_pb2.py
deoxys/deoxys/scripts/: get_deoxys_info.py  print_robot_state.py  reset_robot_joints.py
deoxys/deoxys/utils/: __init__.py  cmd_utils.py  config_utils.py  ik_utils.py  input_utils.py  log_utils.py  numba.py  raw_obs_dict_generators.py  threading_utils.py  transform_utils.py  yaml_config.py
deoxys/deoxys/utils/io_devices/: __init__.py  keyboard.py  spacemouse.py
deoxys/examples/: cartesian_velocity_control.py  collect_data_with_space_mouse.py  collect_low_dim_states_with_spacemouse.py  controller_examples.py  create_dataset_example.py  dummy_torch_policy_rollout.py  ik_example.py  joint_impedance_control.py  joint_position_control.py  osc_control.py  position_only_movement.py  record_robot_joints_with_compliant_control.py  replay_low_dim_demonstration_trajectory.py  run_deoxys_with_space_mouse.py  traj_following_joint_impedance_control.py
deoxys/examples/demo_collection/: create_dataset.py  data_collection.py  replay_traj.py  reset_joints.py  utils.py
deoxys/franka-interface/: franka-interface.md
deoxys/franka-interface/include/controllers/: base_controller.h  cartesian_velocity.h  dummy_controller.h  joint_impedance.h  joint_position.h  osc_impedance.h  osc_impedance_low_freq.h  osc_position_impedance.h  osc_yaw_impedance.h
deoxys/franka-interface/include/utils/: common_utils.h  control_utils.h  log_utils.h  robot_utils.h  shared_memory.h  shared_state.h  zmq_utils.h
deoxys/franka-interface/include/utils/control_callbacks/: cartesian_velocity_calllback.h  joint_pos_callback.h  torque_callback.h
deoxys/franka-interface/include/utils/state_estimators/: base_state_estimator.h  exponential_smoothing_estimator.h
deoxys/franka-interface/include/utils/traj_interpolators/: base_traj_interpolator.h  cosine_cartesian_velocity_traj_interpolator.h  linear_cartesian_velocity_traj_interpolator.h  linear_joint_position_traj_interpolator.h  linear_pose_traj_interpolator.h  linear_position_traj_interpolator.h  min_jerk_joint_position_traj_interpolator.h  min_jerk_pose_traj_interpolator.h  null_velocity_traj_interpolator.h  smooth_joint_traj_interpolator.h
deoxys/franka-interface/src/: franka_control_node.cpp  gripper_control_node.cpp
deoxys/franka-interface/src/controllers/: CONTROLLERS.md  cartesian_velocity.cpp  gripper_control.cpp  joint_impedance.cpp  joint_position.cpp  osc_impedance.cpp  osc_position_impedance.cpp  osc_yaw_impedance.cpp
deoxys/franka-interface/src/examples/: load_yaml.cpp  robot_state_publisher.cpp  spdlog_example.cpp
deoxys/franka-interface/src/test/: test_cartesian_velocity_control.cpp  test_cartesian_velocity_control_2.cpp  test_control_msg.cpp  test_osc_inertia.cpp  test_osc_matrices.cpp  test_pinv.cpp  test_proto.cpp  test_threads.cpp  test_zmq.cpp
deoxys/franka-interface/src/utils/: common_utils.cpp  control_utils.cpp  robot_utils.cpp  zmq_utils.cpp
deoxys/installation/: create_spacemouse.sh
deoxys/proto/: sample.proto
deoxys/proto/franka-interface/: franka_controller.proto  franka_robot_state.proto
